# mock-oidc-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: __main__.py  app.py
app/static/: claims-editor.js  styles.css
app/templates/: _claims_editor.html  login.html  token.html
